@@ -1,3 +1,13 @@
+2001-10-29  jacob berkman  <jacob@ximian.com>
+
+	* gconf-editor/gconf-editor.c (main): bind to GETTEXT_PACKAGE
+	rather than PACKAGE
+
+	* autogen.sh: call glib-gettextize
+
+	* configure.in: set the GETTEXT_PACKAGE to be more like the gnome
+	1 one
+
 2001-10-30  Abel Cheung  <maddog@linux.org.hk>
 
 	* configure.in: When probing for db3, check libdb-3.3, libdb-3.2 and
